--- a/index.html
+++ b/index.html
@@ -1279,8 +1279,8 @@ outras doenças graves.</p></div></div>				</div>
 				</div>
 				<div class="elementor-element elementor-element-7fce5b29 elementor-widget__width-initial elementor-widget-tablet_extra__width-initial elementor-widget elementor-widget-text-editor" data-id="7fce5b29" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Se você possui dúvidas e quer falar direto com um de nossos consultores
-										, disponibilizamos um <strong><strong>Whatssap Exclusivo</strong></strong>. Para acessar clique no botão abaixo.</p>								</div>
+									<p>Se você possui dúvidas e quer falar direto com um de nossos consultores, 
+										disponibilizamos um <strong><strong>Whatssap Exclusivo</strong></strong>. Para acessar clique no botão abaixo.</p>								</div>
 				</div>
 				<div class="elementor-element elementor-element-371a7919 elementor-align-justify elementor-widget__width-initial elementor-widget elementor-widget-button" data-id="371a7919" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
