--- a/index.html
+++ b/index.html
@@ -957,7 +957,7 @@ outras doenças graves.</p></div></div>				</div>
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-8ad08f2 elementor-widget elementor-widget-text-editor" data-id="8ad08f2" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>Cada potinho rende de 2 a 4 aplicações, dependendo do comprimento e volume do cabelo.</p>								</div>
+									<p>Cada potinho rende em média 5 aplicações, dependendo do comprimento e volume do cabelo.</p>								</div>
 				</div>
 					</div>
 				</div>
@@ -1239,7 +1239,7 @@ outras doenças graves.</p></div></div>				</div>
 					<div class="e-con-inner">
 				<div class="elementor-element elementor-element-390da1a elementor-widget elementor-widget-text-editor" data-id="390da1a" data-element_type="widget" data-widget_type="text-editor.default">
 				<div class="elementor-widget-container">
-									<p>O resultado pode durar de 20 a 30 dias, dependendo dos cuidados diários e do tipo de cabelo.</p>								</div>
+									<p>O resultado pode durar de 45 a 60 dias, dependendo dos cuidados diários e do tipo de cabelo.</p>								</div>
 				</div>
 					</div>
 				</div>
